[package]
name = "smcrypto"
version = "0.1.2"
edition = "2021"
authors = ["yumeng <yumeng@foxmail.com>"]
description = "A Rust Implementation of China's Standards of Encryption Algorithms(SM2/SM3/SM4)"
keywords = ["cipher", "cryptography"]
license = "MIT"
repository = "https://github.com/zhuobie/smcrypto"

[dependencies]
num-traits = "0.2.14"
num-bigint = "0.4.3"
hex = "0.4.3"
num-integer = "0.1.44"
rand = "0.8.4"
pem = "1.0.2"
lazy_static = "1.4.0"
base64 = "0.13.0"
