[package]
name = "smcrypto"
version = "0.2.1"
edition = "2021"
authors = ["yumeng <yumeng@foxmail.com>"]
description = "A Rust Implementation of China's Standards of Encryption Algorithms(SM2/SM3/SM4)"
keywords = ["cipher", "cryptography"]
license = "MIT"
repository = "https://github.com/zhuobie/smcrypto"

[dependencies]
bytes = "1.2.1"
num-traits = "0.2.15"
num-bigint = "0.4.3"
hex = "0.4.3"
num-integer = "0.1.45"
rand = "0.8.5"
pem = "1.1.0"
base64 = "0.13.1"
yasna = { version = "0.5.0", features = ["num-bigint"] }
once_cell = "1.16.0"

[dev-dependencies]
# benchmarking 
criterion = "^0.4"

[[bench]]
name = "benchmark"
harness = false
